# polytech-masters-app

./: .gitignore  01-model-showcase.ipynb  README.md  main.py  pyproject.toml  schema.drawio
api/: __init__.py  app.py  generator.py  registry_routes.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: HomePage.tsx  MockStreamPage.tsx  RegistriesPage.tsx  RegistryDetailPage.tsx
frontend/src/styles/: global.css
infra/: docker-compose.yaml
models/: __init__.py  bounds.py  glitch.py
src/models/: __init__.py  bounds.py  spikes.py  wrapper.py
src/registry/: __init__.py  registry.py  types.py
