[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "polytech-masters-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "joblib>=1.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/models", "src/registry", "api"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "pip>=26.1.1",
]
